src/objects/Drop_Box__c.object
<CustomObject>
    <description>For simple file uploads</description>
    <fields>
        <fullName>Application_Affidavit_MCC_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Affidavit (MCC-1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMR_Conditional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>May disclose candidacy for MCC</inlineHelpText>
        <label>BMR Conditional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Loan_Application_BMR_DALP_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMR DALP Loan Application - BMR DALP 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Loan_Program_Transmittal_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMR DALP Loan Program Transmittal Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cert_of_Initial_Rcpt_of_Recapture_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MCC 1a</inlineHelpText>
        <label>Cert of Initial Rcpt of Recapture Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>124</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Credit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Credit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_of_Final_Sales_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Final Sales Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTHB_Certificate_CalHome_6_month_rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTHB Certificate (CalHome 6 month rule)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Appraisal_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>APPRAISAL MUST NOT REFLECT BMR SALES PRICE AS VALUE</inlineHelpText>
        <label>Fair Market Appraisal Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Loan_Approval_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Loan Approval / Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCD_Forms_Copies_of_Identifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCD Forms - Copies of Identfications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Tax_Affidavit_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Income Tax Affidavit, if applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lenders_Cert_of_Applicant_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lenders Cert of Applicant Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lenders_Cert_of_Borrower_Eligibilty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BMR-DALP 2</description>
        <inlineHelpText>BMR-DALP 2</inlineHelpText>
        <label>Lenders Cert of Borrower Eligibilty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_Committment_MCC_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCC Committment - MCC-4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_Transmittal_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCC Transmittal Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Application_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>$675 payable to the City &amp; County of San Francisco</description>
        <inlineHelpText>$675 payable to the City &amp; County of San Francisco</inlineHelpText>
        <label>Non-Refundable Application Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Gift_Letters_Review_AMI_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Original Gift Letters - Review AMI Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_BMR_DALP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Lender_Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_MCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preliminary_Title_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary Title Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipt_for_Escrow_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt for Escrow Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_IRS_Form_4506__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request for Copy of Tax Return</description>
        <inlineHelpText>Request for Copy of Tax Return</inlineHelpText>
        <label>Signed IRS Form 4506</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Reject_Reason__c</fullName>
        <label>Upload Reject Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verification_of_Employment_VOE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification of Employment - VOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wiring_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wiring Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1003_signed_and_dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1003 (signed and dated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1008__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1008</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1084_Form_for_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1084 Form for Self-Employed</label>
        <type>Checkbox</type>
    </fields>
    <label>Upload</label>
    <listViews>
        <fullName>My_uploads</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Company_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Upload_Reject_Reason__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My uploads</label>
    </listViews>
    <listViews>
        <fullName>Upload_Info</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Upload Info</label>
    </listViews>
    <nameField>
        <label>Name of Upload</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uploads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>